<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_layout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/phone_register_step1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_register_step1_input_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/input_register_phone"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/verify_code_step1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_register_step1_input_verifycode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/input_verification_code"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/activity_register_step1_get_verifycode"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/get_verification_code"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />

    <LinearLayout
        android:id="@+id/enterprise_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/cell_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/referrer"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/activity_register_step1_input_referrer_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:singleLine="true"
                android:hint="@string/input_referrer_phone"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/cell_divider" />
    </LinearLayout>

    <TextView
        android:id="@+id/activity_register_step1_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>