<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_layout"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/activity_register_step2_referrerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/referrer"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_register_step2_referrer_nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:inputType="none"
            android:editable="false"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>
    
	<View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_register_step2_input_nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/input_nickname"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/passwork"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_register_step2_input_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginRight="10dp"
            android:password="true"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/input_password_step2"
            android:textSize="14sp" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weixin_step2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_register_step2_input_weixin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/input_weixin_step2"
            android:textSize="14sp" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />
    
    <TextView
        android:id="@+id/activity_register_step2_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
