<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_layout"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/password_new"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_find_password_step2_input_new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:background="@null"
            android:password="true"
            android:singleLine="true"
            android:hint="@string/input_new_password"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/password_confirm"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_find_password_step2_input_new_password_again"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:password="true"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/input_new_password_again"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider" />

    <TextView
        android:id="@+id/activity_find_password_step2_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>