<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg_e0">

    <LinearLayout
        android:id="@+id/activity_purchase_order_mTabContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_tabs_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_purchase_order_waiting_confirm"
            style="@style/tab_item_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/waiting_handle" />

        <TextView
            android:id="@+id/activity_purchase_order_waiting_2pay"
            style="@style/tab_item_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/waiting_2pay" />

        <TextView
            android:id="@+id/activity_purchase_order_waiting_deliver"
            style="@style/tab_item_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/waiting_deliver" />

        <TextView
            android:id="@+id/activity_purchase_order_delivered"
            style="@style/tab_item_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/done_deliver" />

        <TextView
            android:id="@+id/activity_purchase_order_receipted"
            style="@style/tab_item_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/receipted" />
    </LinearLayout>

    <com.socialbusiness.dev.orangebusiness.component.TabIndicator
        android:id="@+id/activity_purchase_order_mTabIndicator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white" />

    <View
        android:id="@+id/tab_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider_dark" />


    <com.socialbusiness.dev.orangebusiness.component.FixedViewPager
        android:id="@+id/activity_purchase_order_mViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        />

    <View
        android:id="@+id/total_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cell_divider_dark" />

    <LinearLayout
        android:id="@+id/total_money_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/total_money_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mall_right_text_color"
            android:textSize="@dimen/order_detail_normal_text_size"
            />

        <TextView
            android:id="@+id/total_money_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_product_price"
            android:textSize="@dimen/order_detail_normal_text_size" />
    </LinearLayout>
</LinearLayout>