<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/fragment_base_mLayerContextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg_e0"
        />

    <RelativeLayout
        android:id="@+id/fragment_base_nodata_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/fragment_base_nodata_image"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_above="@+id/fragment_base_nodata_text"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/fragment_base_nodata_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:text="@string/base_nodata" />

        <TextView
            android:id="@+id/fragment_base_nodata_reload"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@+id/fragment_base_nodata_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/base_reload"
            android:textColor="@color/main_color"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_base_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/fragment_base_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/fragment_base_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_base_loading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/base_loading" />
    </RelativeLayout>

</RelativeLayout>